@@ -28,6 +28,7 @@ import java.io.FilenameFilter;
 import java.io.IOException;
 import java.io.InputStream;
 import java.lang.invoke.MethodHandles;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Paths;
 import java.util.Arrays;
@@ -74,7 +75,6 @@ import org.apache.solr.embedded.JettySolrRunner;
 import org.apache.solr.security.AllowListUrlChecker;
 import org.apache.solr.util.TestInjection;
 import org.apache.solr.util.TimeOut;
-import org.hamcrest.MatcherAssert;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.BeforeClass;
@@ -257,9 +257,7 @@ public class TestReplicationHandler extends SolrTestCaseJ4 {
   }
 
   private SolrClient adminClient(JettySolrRunner client) {
-    String adminUrl =
-        client.getBaseUrl().toString().replace("/" + DEFAULT_TEST_COLLECTION_NAME, "");
-    return getHttpSolrClient(adminUrl);
+    return getHttpSolrClient(client.getBaseUrl().toString());
   }
 
   @Test
@@ -847,7 +845,7 @@ public class TestReplicationHandler extends SolrTestCaseJ4 {
             + "/"
             + DEFAULT_TEST_CORENAME
             + ReplicationHandler.PATH;
-    URL url = new URL(leaderUrl);
+    URL url = new URI(leaderUrl).toURL();
     InputStream stream = url.openStream();
     stream.close();
 
@@ -1581,8 +1579,7 @@ public class TestReplicationHandler extends SolrTestCaseJ4 {
               followerClient.query(q);
             });
     assertEquals(SolrException.ErrorCode.BAD_REQUEST.code, thrown.code());
-    MatcherAssert.assertThat(
-        thrown.getMessage(), containsString("Missing required parameter: command"));
+    assertThat(thrown.getMessage(), containsString("Missing required parameter: command"));
   }
 
   @Test
@@ -1596,8 +1593,7 @@ public class TestReplicationHandler extends SolrTestCaseJ4 {
               followerClient.query(q);
             });
     assertEquals(SolrException.ErrorCode.BAD_REQUEST.code, thrown.code());
-    MatcherAssert.assertThat(
-        thrown.getMessage(), containsString("Missing required parameter: name"));
+    assertThat(thrown.getMessage(), containsString("Missing required parameter: name"));
   }
 
   @Test
